# multirobot_exploration

./: README.md
RRT_Real_Car/: README.md
RRT_Real_Car/mapmerge/launch/: mapmerge_real_single_car.launch  mapmerge_sim_single_twomaps.launch  mapmerge_sim_two_cars.launch  mapmerge_sim_two_cars_twomaps.launch
RRT_Real_Car/mapmerge/src/: costmapmerge_tf_node.cpp  mapmerge_tf_node.cpp
RRT_Real_Car/rrt_exploration_real_two_cars/: CMakeLists.txt  package.xml
RRT_Real_Car/rrt_exploration_real_two_cars/launch/: single.launch  single_jianming.launch  single_local.launch  single_mapmerge_map.launch  single_rrt_node.launch  single_rrt_node_zhilin_jianming.launch  single_zhilin_jianming.launch  three_robots.launch  two_robots_real_car.launch  two_robots_real_car_zhilin_jianming.launch
RRT_Real_Car/rrt_exploration_real_two_cars/rviz/: single_car.rviz  single_car_robot2.rviz  two_real_cars.rviz
RRT_Real_Car/rrt_exploration_real_two_cars/scripts/: assigner.py  assigner_jianming.py  filter.py  filter_jianming.py  frontier_opencv_detector.py  functions.py
RRT_Real_Car/rrt_exploration_real_two_cars/src/: functions.cpp  global_rrt_detector.cpp  local_rrt_detector.cpp  rrt_node.cpp
RRT_Real_Car/support_files/: CMakeLists.txt
RRT_Real_Car/xtark_ros_ws/xtark_audio/: CMakeLists.txt  package.xml
RRT_Real_Car/xtark_ros_ws/xtark_ctl/: CMakeLists.txt  package.xml
RRT_Real_Car/xtark_ros_ws/xtark_nav/: CMakeLists.txt
RRT_Real_Car/xtark_ros_ws/xtark_nav_depthcamera/: CMakeLists.txt  package.xml
RRT_Real_Car/xtark_ros_ws/xtark_ros_wrapper/: CMakeLists.txt  README.md  package.xml
RRT_Simulation/: README.md
RRT_Simulation/mapmerge/: CMakeLists.txt  package.xml
RRT_Simulation/rrt_exploration/: CMakeLists.txt  README.md  package.xml
RRT_Simulation/rrt_exploration/deprecated/: MeanShift.cpp  global_rrt_detector.cpp  rrt_node_backup.cpp  test.cpp
RRT_Simulation/rrt_exploration/include/: MeanShift.h
RRT_Simulation/rrt_exploration/launch/: single_sim_python_multi_node.launch  single_sim_rrt_node.launch  two_sim_python_multi_node.launch  two_sim_rrt_node.launch
RRT_Simulation/rrt_exploration/scripts/: assigner.py  assigner_jianming.py  assigner_jianming_nocallfunction.py  filter.py  filter_jianming.py  frontier_opencv_detector.py  functions.py  robot_goal_driver.py
RRT_Simulation/rrt_exploration/src/: filter_assigner_function_lib_deprecated.cpp  functions.cpp  local_rrt_detector.cpp  rrt_node_bk.cpp
RRT_Simulation/rrt_exploration_tutorials/: frames.gv
apf/: CMakeLists.txt
apf/launch/: single_sim_apf_node.launch
apf/src/: apf_node.cpp  map.txt
cartographer_operation/: README.md
cartographer_operation/cartographer_map_discrete/: CMakeLists.txt  package.xml
cartographer_operation/icp_registration/: CMakeLists.txt
install_support_files/: README.md
real_cars_simulation/: README.md
real_cars_simulation/apf/: CMakeLists.txt  README.md  output_dismap2.txt  output_map2.txt  package.xml  question1.txt  question1_dismap.txt
real_cars_simulation/icp_registration/: CMakeLists.txt
real_cars_simulation/xtark_ros_wrapper/: CMakeLists.txt  setup.py
(+207 files in other folders)
